WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229140
Incorrect repaint when inline level box style change triggers line height change
https://bugs.webkit.org/show_bug.cgi?id=229140
Summary
Incorrect repaint when inline level box style change triggers line height change
Tim Nguyen (:ntim)
Reported
2021-08-16 07:56:54 PDT
Created
attachment 435602
[details]
Testcase hi is displayed twice with the testcase.
Attachments
Testcase
(353 bytes, text/html)
2021-08-16 07:56 PDT
,
Tim Nguyen (:ntim)
no flags
Details
Test reduction
(191 bytes, text/html)
2021-08-16 08:08 PDT
,
alan
no flags
Details
Test reduction
(187 bytes, text/html)
2021-08-16 08:11 PDT
,
alan
no flags
Details
patch
(4.63 KB, patch)
2021-08-17 01:29 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-16 07:58:37 PDT
<
rdar://problem/81980863
>
alan
Comment 2
2021-08-16 08:08:56 PDT
Created
attachment 435603
[details]
Test reduction
alan
Comment 3
2021-08-16 08:11:10 PDT
Created
attachment 435604
[details]
Test reduction
alan
Comment 4
2021-08-16 08:13:03 PDT
This looks to be timing related too. If you can't repro, try locally (or change the timeout).
Antti Koivisto
Comment 5
2021-08-16 09:51:47 PDT
We fail to repaint the old content area when the block shrinks vertically as a result of a layout. Legacy handles this by invalidating deleted line boxes. In many real world cases the content below moves, triggering repaint and hiding the issue.
Antti Koivisto
Comment 6
2021-08-17 01:29:00 PDT
Created
attachment 435671
[details]
patch
EWS
Comment 7
2021-08-17 07:11:30 PDT
Committed
r281136
(
240590@main
): <
https://commits.webkit.org/240590@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435671
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug