Incorrect repaint when inline level box style change triggers line height change https://bugs.webkit.org/show_bug.cgi?id=229140 <rdar://problem/81980863>

Reviewed by Alan Bujtas.

Source/WebCore:

If an existing block shrinks vertically as a result of layout we fail to invalidate the
old content area for repaint, thus potentially leaving painting artefacts behind.
This is often hidden by the content shift triggering other repaints.

Test: fast/repaint/line-layout-block-shrink.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutModernLines):

Adjust the repaint area to include the content size before the layout.

LayoutTests:

* fast/repaint/line-layout-block-shrink-expected.txt: Added.
* fast/repaint/line-layout-block-shrink.html: Added.


Canonical link: https://commits.webkit.org/240590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281136 268f45cc-cd09-0410-ab3c-d52691b4dbfc